More advents of code done
accidently had day 5 as day 1 in 2015, but moved it correctly and solved the correct day 01 also