@@ -2,36 +2,57 @@ package year2015.day01;
 
 import java.io.IOException;
 import java.nio.file.Files;
+import java.nio.file.Path;
 import java.nio.file.Paths;
 import java.util.List;
-import java.util.regex.Pattern;
 
 public class Day01 {
 
-    private List<String> input;
+    private String input;
 
     public Day01(String text) {
-        String day = "01";
-        String year = "2015";
-        try {
+        String day = "01"; //day
+        String year = "2015"; //year
+        try{
             String filePath = "src/resources/" + year + "/" + day + "/" + text;
-            input = Files.readAllLines(Paths.get(filePath));
+            input = Files.readString(Path.of(filePath));
         } catch (IOException e) {
            e.printStackTrace();
         }
     }
     public int part1() {
-        return (int) input.stream()
-                .filter(c -> !Pattern.compile("ab|cd|pq|xy").matcher(c).find())
-                .filter(c -> Pattern.compile("(.*[aeiou]){3}").matcher(c).find())
-                .filter(c -> Pattern.compile("(.)\\1").matcher(c).find())
-                .count();
+        int floor = 0;
+        for (int i = 0; i < input.length(); i++) {
+            if(input.charAt(i) == '('){
+                floor++;
+            } else if(input.charAt(i) == ')'){
+                floor--;
+            }
+        }
+        return floor;
     }
 
     public int part2() {
-        return (int) input.stream()
-                .filter(c -> Pattern.compile("(..).*\\1").matcher(c).find())
-                .filter(c -> Pattern.compile("(.).\\1").matcher(c).find())
-                .count();
+        int floor = 0;
+        int charNumber = 0;
+        for (int i = 0; i < input.length(); i++) {
+            if(input.charAt(i) == '('){
+                floor++;
+            } else if(input.charAt(i) == ')'){
+                floor--;
+            }
+            if(floor == -1){
+                charNumber = i;
+                break;
+            }
+        }
+        return charNumber + 1;
+    }
+
+    public static void main(String[] args) {
+        Day01 day01 = new Day01("input.txt");
+        System.out.println(day01.input);
+        System.out.println("Part 1: " + day01.part1());
+        System.out.println("Part 2: " + day01.part2());
     }
 }
